# labka

./: FuncA.cpp  FuncA.h  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  main  main.cpp  test_FuncA.cpp
.deps/: test_FuncA.Po
.github/workflows/: cpp.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: autoreconf.after  autoreconf.before  changelog  control  files  rules
debian/.debhelper/main/: dbgsym-build-ids
debian/.debhelper/main/dbgsym-root/DEBIAN/: control  md5sums
debian/main/DEBIAN/: control  md5sums
